<resources>
    <string name="app_name">FIXURFONE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="reservation_id">Reservation ID</string>
    <string name="booking_date">Booking Date</string>
    <string name="booking_time">Booking Time</string>
    <string name="repair_status">Repair Status</string>
    <string name="status">Status</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reservation">Reservation</string>
    <string name="appointment">Appointment</string>
    <string name="select_booking_date">Select Booking Date</string>
    <string name="phone_model">Phone Model</string>
    <string name="enter_phone_model">Enter Phone Model</string>
    <string name="remark">Remark</string>
    <string name="book">Book</string>
    <string name="prblem_issues">Prblem/ Issues</string>
    <string name="remark_if_any">Remark (If any)</string>
    <string name="select">Select</string>
    <string name="problem_issues">Problem/ Issues</string>
    <string name="warning">Warning</string>
    <string name="product">Product</string>
    <string name="brand">Brand</string>
    <string name="device">Device</string>
    <string name="board">Board</string>
    <string name="bootloader">Bootloader</string>
    <string name="display">Display</string>
    <string name="hardware">Hardware</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="user">User</string>
    <string name="profile">Profile</string>
    <string name="device_infomation">Device Infomation</string>
    <string name="device_list">Device List</string>
    <string name="powered_by">Powered By</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="address">Address</string>
</resources>