<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddReservation">
    <ScrollView
        android:id="@+id/myNavHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/textView"
                style="@style/Header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appointment" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/appointment" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/booking_date"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/bookingDate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:focusable="false"
                    android:enabled="true"
                    android:hint="@string/select_booking_date"
                    android:inputType="date"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Booking Time"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_corner"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/phone_model"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerPhoneModel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_corner"
                    android:spinnerMode="dropdown"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/phoneModel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/enter_phone_model"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/remark_if_any"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/remark"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/enter_phone_model"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <TextView
                    android:id="@+id/selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/problem_issues"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/battery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Battery Replacement" />

                <CheckBox
                    android:id="@+id/screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Screen Service" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/book"
                    app:cornerRadius="@dimen/medium_padding" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</layout>