<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DeviceInfo">

    <ScrollView
        android:id="@+id/myNavHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/textView"
                style="@style/Header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Device Infomation" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/deviceinfo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Device Name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/deviceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ID"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Pid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/device"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/device"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/board"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/board"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bootloader"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bootloader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/display"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hardware"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hardware"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturer"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SDK"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sdk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/deviceInfoFont"
                    tools:text="test" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:backgroundTint="@color/lightblue"
                    android:text="Register Device"
                    app:cornerRadius="@dimen/medium_padding" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>