<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUp">
    <ScrollView
        android:id="@+id/myNavHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/login_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold"
                android:typeface="normal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/email"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/phone_number"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="Enter phone number"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/address"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/address"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:minLines="6"
                    android:gravity="top|start"
                    android:maxLines="8"
                    android:hint="Enter address"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@drawable/rounded_corner"
                    android:scrollbars="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Password"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Confirm Password"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/confirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:hint="Enter confirm password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:text="@string/sign_up"
                    app:cornerRadius="@dimen/medium_padding" />

                <TextView
                    android:id="@+id/backBtn"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="Back"
                    android:textColor="@color/lightblue"
                    android:textSize="16sp"
                    app:cornerRadius="@dimen/medium_padding" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>